--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,5 +1,46 @@
-.header {
+/*.header {
   width: 100%;
   background-color: #383838;
   font-family: arial, sans-serif;
+}*/
+
+
+body {font-family: Helvetica, sans-serif; font-size:0.8em; margin: 0px; padding:0px; width:auto;}
+
+header {border:0px; margin:0px; padding:0px; width: auto; height:200px; background-color:#E6E6E6;
+  }
+
+h1 {font-family: Helvetica, sans-serif; font-size:2.5em; color:#666; letter-spacing: 0px; text-transform: uppercase; margin-top: 0px; padding-top: 70px;}
+
+button {
+  color: #2E2E2E;
+  font-weight: bold;
+  font-size: 95%;
+  text-transform: uppercase;
+  float: right;
+}
+
+table { margin:5px; padding: 10px; }
+
+td {border:1px solid #666; border-collapse: collapse;margin:5px; padding: 3px; font-size: 1em; color:#666;}
+
+th {text-align:center; font-size:1.2em; font-style: bold; colspan: 2;}
+
+#content{margin-top: 20px; }
+
+/*footer{width: auto; clear:both; text-align:center; padding:5px;}*/
+footer {
+  float: left;
+  margin: 0;
+  width: 100%;
+  font-size: 0.75em;
+  text-align: center;
+  clear: both;
+  padding-top: 5px;
+  color: #999;
+}
+
+.icon {
+  width: 60px;
+  height: auto;
 }
