--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -5,26 +5,146 @@
 }*/
 
 
-body {font-family: Helvetica, sans-serif; font-size:0.8em; margin: 0px; padding:0px; width:auto;}
+body {
+  font-family: Helvetica, sans-serif;
+  font-size:0.8em; margin: 0px; 
+  padding:0px; width:auto;
+}
 
-header {border:0px; margin:0px; padding:0px; width: auto; height:200px; background-color:#E6E6E6;
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.wrapper {
+  width: 100%;
+  /*padding: 40px;*/
+}
+
+header {
+  border:0px; 
+  margin:0px; padding:0px; 
+  width: 100%; 
+  height:200px; 
+  background-color:#E6E6E6;
+
+
   }
 
-h1 {font-family: Helvetica, sans-serif; font-size:2.5em; color:#666; letter-spacing: 0px; text-transform: uppercase; margin-top: 0px; padding-top: 70px;}
+.header-content {
+  padding-left: 40px;
+  padding-top: 15px
+}
+.main {
+  margin-top: 50px;
+  padding: 15px 40px;
+  min-height: 400px;
+}
+
+.logo {
+  margin-top: 36px;
+}
+
+h1 {
+  font-family: Helvetica, sans-serif; 
+  font-size: 2.5em; 
+  color: #666; 
+  letter-spacing: 0px; 
+  text-transform: uppercase; 
+  margin-bottom: 0px;
+  /*margin-top: 0px; */
+  /*padding-top: 70px;*/
+}
+
+/******************
+NAVIGATION
+******************/
+
+nav {
+  text-align: left;
+  padding: 10px 0;
+  background-color: #666;
+  margin-top: -7px;
+  height: 20px;
+}
+
+nav a {
+  color: white;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 40px;
+  font-size: 1.125em;
+}
+
+nav a {
+  font-weight: normal;
+  /*padding: 15px 10px;*/
+}
+/******************/
+
+
 
 button {
-  color: #2E2E2E;
-  font-weight: bold;
+/*  color: white;
   font-size: 95%;
   text-transform: uppercase;
   float: right;
+  background-color: #383838;*/
+
+    /*display: block;*/
+/*    border-radius: 5px;*/
+    padding: 5px;
+    width: 100px;
+    margin: 10px auto 5px;
+    background-color: #4D4D4D;
+    border: none;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    margin: 5px;
+
 }
 
-table { margin:5px; padding: 10px; }
+form {
+  /*margin: 10px;*/
+}
+.login, .signup {
+ float: right;
+}
 
-td {border:1px solid #666; border-collapse: collapse;margin:5px; padding: 3px; font-size: 1em; color:#666;}
+.login {
+ margin-left: 3%;
+ margin-right: 5%;
 
-th {text-align:center; font-size:1.2em; font-style: bold; colspan: 2;}
+}
+
+table { 
+  margin:5px; 
+  padding: 10px; }
+
+td {
+  /*border:1px solid #666; */
+  width: 100px;
+  border: none;
+  border-collapse: collapse;
+  margin:5px; 
+  padding: 3px; 
+  font-size: 1em; 
+  color:#666;}
+
+th {
+  text-align: left;
+  font-size:1.2em; 
+  font-style: bold; 
+  colspan: 2;
+}
 
 #content{margin-top: 20px; }
 
